# Zero

./: .gitignore  AGENTS.md  Makefile  README.md  ROADMAP.md
docs/: ARCHITECTURE.md  PRD-GUIDELINES.md
services/chain/: Cargo.toml
services/chain/src/grpc/: server.rs
services/chain/src/sap/: mod.rs  register_agent.rs
services/gateway/cmd/gateway/: main.go
services/gateway/internal/runs/: store.go
services/gateway/internal/server/: http.go
services/landing/: components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
services/landing/src/: App.tsx  index.css  main.tsx
services/landing/src/components/: ApiKeyInput.tsx  RunCard.tsx  RunForm.tsx  RunHistory.tsx
services/landing/src/components/blocks/: cta-1.tsx  cta-2.tsx  features-1.tsx  hero-1.tsx  how-it-works-1.tsx  stats-1.tsx
services/landing/src/components/react-bits/: animated-list.tsx  aurora-blur.tsx  glitch-text.tsx  gradient-blob.tsx
services/landing/src/lib/: api.ts  types.ts
services/landing/src/pages/: Dashboard.tsx  Landing.tsx
