[package]
name = "zero-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
borsh = { version = "1", features = ["derive"] }
dotenvy = "0.15"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
solana-client = "2.1"
solana-sdk = "2.1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
